# strobe

./: .gitignore  Cargo.toml  IMPROVEMENTS.md  MCP_IMPROVEMENTS_SUMMARY.md  README.md  install.sh  test_scenarios.md
.atelier/specs/: 2026-03-02-linux-ui-observation.md
.cargo/: config.toml
.claude/: CLAUDE.md  settings.json  strobe-field-test.md
agent/: package-lock.json  package.json  tsconfig.json
agent/src/: agent.ts  cmodule-tracer.ts  hooks.ts  object-serializer.ts  platform.ts  rate-tracker.ts  serializer.ts  utils.ts
docs/: ARCHITECTURE.md  CURRENT-SPEC.md  FEATURES.md  README.md  event-limit-analysis.md  event-limit-runtime-config.md  phase2-implementation-summary.md  phase4-ui-observation-implementation-summary.md  python-final-status.md  python-hook-installation-fix.md  python-support-status.md
docs/features/: 2026-02-06-contextual-watch-filtering.md
docs/field-tests/: 2026-02-10-breakpoints.md  2026-02-10-erae-lab-full.md  2026-02-10-stepping-logpoints.md
docs/plans/: 2026-02-05-phase-1a-tracing-foundation.md  2026-02-05-tool-descriptions-and-output-capture.md  2026-02-06-cmodule-high-perf-tracing.md  2026-02-06-contextual-watches.md  2026-02-06-event-limits.md  2026-02-06-lazy-dwarf-parsing.md  2026-02-06-lifecycle-robustness.md  2026-02-06-phase1b-completion.md  2026-02-07-daemon-lifecycle-hardening.md  2026-02-07-phase-1c-crash-multiprocess.md  2026-02-07-phase-1d-test-instrumentation.md  2026-02-07-serialization-depth.md  2026-02-08-code-review-fixes.md  2026-02-08-integration-test-restructure.md  2026-02-08-linux-multi-arch-support.md  2026-02-08-live-memory-reads.md  2026-02-08-settings-system.md  2026-02-08-smart-test-monitoring.md  2026-02-09-active-debugging.md  2026-02-10-m0-daemon-prerequisites.md  2026-02-10-m1-core-extension.md  2026-02-10-m2-test-runner.md  2026-02-10-m3-dap-debugging.md  2026-02-10-m4-polish-power-features.md  2026-02-10-phase3-review-fixes.md  2026-02-11-multilang-plan1-foundation.md  2026-02-11-multilang-plan2-python.md  2026-02-11-multilang-plan3-js-ts.md  2026-02-11-phase4-ui-observation.md  2026-02-17-phase5-multilang-completion.md  2026-02-17-phase5b-js-ts-support.md  (+5 more)
scripts/: install-local.sh  reap-zombies.sh
skills/: strobe-debugging.md  strobe-field-test.md  strobe-tdd.md  strobe-test-setup.md
src/: capabilities.rs  config.rs  error.rs  install.rs  lib.rs  main.rs  setup_vision.rs
src/daemon/: mod.rs  (+2 more)
strobe-vscode/: .vscodeignore  CHANGELOG.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
tests/: breakpoint_basic.rs  breakpoint_behavioral.rs  bun_e2e.rs  dwarf_line_table.rs  evaluate_vision.py  frida_e2e.rs  integration.rs  linux_ui_integration.rs  logpoint_and_write.rs  node_e2e.rs  phase1b_stress.rs  phase1c_e2e.rs  phase1d_test.rs  phase2a_gaps.rs  python_comprehensive.rs  python_e2e.rs  python_features.rs  stepping_basic.rs  stepping_behavioral.rs  stress.rs  stress_test_limits.rs  stress_test_phase1d.rs  test_runner.rs  test_vision_real.py  ui_observation.rs  validation.rs  vitest_e2e.rs
tests/fixtures/cpp/: CMakeLists.txt
tests/fixtures/cpp/src/: audio.cpp  audio.h  crash.cpp  crash.h  globals.cpp  globals.h  main.cpp  midi.cpp  midi.h  timing.cpp  timing.h
tests/fixtures/cpp/tests/: test_main.cpp
vision-sidecar/: MODELS.md  pyproject.toml  requirements.txt  setup_models.py
(+181 files in other folders)
