[package]
name = "strobe"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "LLM-native debugging infrastructure"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# DWARF parsing
gimli = "0.31"
object = "0.36"
memmap2 = "0.9"

# Symbol demangling
cpp_demangle = "0.4"
rustc-demangle = "0.1"

# Frida bindings (auto-download devkit)
frida = { version = "0.17", features = ["auto-download"] }
frida-sys = "0.17"

# MCP protocol
jsonrpc-core = "18"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5"
libc = "0.2"
rayon = "1"

# Test instrumentation
quick-xml = "0.37"
regex = "1"

# UI vision sidecar (base64 encoding for screenshots sent to Python sidecar)
base64 = "0.22"

# Python support
rustpython-parser = "0.4"
walkdir = "2.5"

# JavaScript/TypeScript support
sourcemap = "9"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[target.'cfg(target_os = "macos")'.dependencies]
# UI screenshot encoding (capture.rs is macOS-only)
png = "0.17"
accessibility-sys = "0.2"
core-foundation = "0.10"
core-foundation-sys = "0.8"
core-graphics = "0.24"

[[bin]]
name = "strobe"
path = "src/main.rs"
